--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  
   "scripts": {
     "start": "PORT=8000 react-scripts start",
     "build": "react-scripts build",
@@ -28,7 +29,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules":{
+      "jsx-a11y/alt-text": [0] 
+    }
   },
   "browserslist": {
     "production": [
