--- a/package.json
+++ b/package.json
@@ -3,23 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^35.3.2",
     "@ckeditor/ckeditor5-react": "^5.0.3",
-    "@ckeditor/ckeditor5-upload": "^35.3.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "i18next": "^22.0.8",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
     "react-scripts": "5.0.1",
+    "suneditor": "^2.44.3",
+    "suneditor-react": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
-    "start": "set PORT=8000 && react-scripts start",
+    "start": "PORT=8000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -29,8 +26,10 @@
       "react-app",
       "react-app/jest"
     ],
-    "rules":{
-      "jsx-a11y/alt-text": [0] 
+    "rules": {
+      "jsx-a11y/alt-text": [
+        0
+      ]
     }
   },
   "browserslist": {
