--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "axios": "^1.2.1",
     "i18next": "^22.0.8",
     "i18next-browser-languagedetector": "^7.0.1",
+    "js-base64": "^3.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
+    "react-html-parser": "^2.0.2",
     "react-i18next": "^12.1.1",
     "react-scripts": "5.0.1",
     "suneditor": "^2.44.3",
