--- a/package.json
+++ b/package.json
@@ -12,10 +12,23 @@
     "react-hook-form": "^7.40.0",
     "react-html-parser": "^2.0.2",
     "react-i18next": "^12.1.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "suneditor": "^2.44.3",
     "suneditor-react": "^3.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
