--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "i18next": "^22.0.8",
     "i18next-browser-languagedetector": "^7.0.1",
     "js-base64": "^3.7.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-html-parser": "^2.0.2",
@@ -28,7 +30,8 @@
     "workbox-range-requests": "^6.5.4",
     "workbox-routing": "^6.5.4",
     "workbox-strategies": "^6.5.4",
-    "workbox-streams": "^6.5.4"
+    "workbox-streams": "^6.5.4",
+    "workbox-window": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,6 +63,8 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.4.5"
+    "copy-webpack-plugin": "^11.0.0",
+    "react-router-dom": "^6.4.5",
+    "workbox-webpack-plugin": "^6.5.4"
   }
 }
