--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,1 +1,5 @@
-{"short_name":"Coffeecup","name":"CoffeecupPWA","icons":[{"src":"pwaicon192.png","type":"image/png","sizes":"192x192"},{"src":"pwaicon512.png","type":"image/png","sizes":"512x512"}],"start_url":".","background_color":"#7f502b","theme_color":"#fdc889","display":"fullscreen","orientation":"portrait"}
+{
+    "short_name":"Coffeecup",
+    "name":"CoffeecupPWA",
+    "icons":[
+        {"src":"pwaicon192.png","type":"image/png","sizes":"192x192"},{"src":"pwaicon512.png","type":"image/png","sizes":"512x512"}],"start_url":".","background_color":"#7f502b","theme_color":"#fdc889","display":"fullscreen","orientation":"portrait"}
