--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,4 +2,28 @@
     "short_name":"Coffeecup",
     "name":"CoffeecupPWA",
     "icons":[
-        {"src":"pwaicon192.png","type":"image/png","sizes":"192x192"},{"src":"pwaicon512.png","type":"image/png","sizes":"512x512"}],"start_url":".","background_color":"#7f502b","theme_color":"#fdc889","display":"fullscreen","orientation":"portrait"}
+        {
+            "src":"pwaicon192.png",
+            "type":"image/png",
+            "sizes":"192x192",
+            "purpose": "any"
+        },
+        {
+            "src":"pwaicon512.png",
+            "type":"image/png",
+            "sizes":"512x512",
+            "purpose": "any"
+        },
+        {
+            "src": "maskable_pwaicon192.png",
+            "type": "image/png",
+            "sizes": "192x192",            
+            "purpose": "maskable"
+        }
+            ],
+        "start_url":".",
+        "background_color":"#7f502b",
+        "theme_color":"#fdc889",
+        "display":"fullscreen",
+        "orientation":"portrait"
+}
