--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "i18next": "^22.0.8",
     "i18next-browser-languagedetector": "^7.0.1",
     "js-base64": "^3.7.3",
+    "lexical": "^0.7.5",
     "loadash": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
